--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "vue webpack component",
   "main": "index.js",
   "scripts": {
-    "test": "webpack --config -b -p",
-    "autocomplete": "webpack --config config/autoComplete.config.js -b -p"
+    "test": "webpack --config config/test.config.js -b -p"
   },
   "keywords": [
     "vue",
     "webpack",
     "component"
   ],
+  "repository":"https://github.com/louisluyi/myVue.git",
   "dependencies": {
     "vue": "^1.0.13"
   },
@@ -20,6 +20,8 @@
     "babel-loader": "^6.1.0",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
     "style-loader": "^0.13.0",
     "template-html-loader": "0.0.3",
     "url-loader": "^0.5.7",
